--- a/src/scss/footer/_nice-select_custom.scss
+++ b/src/scss/footer/_nice-select_custom.scss
@@ -5,7 +5,7 @@
     margin-top: -7px;
     border-bottom: 1px solid #000;
     border-right: 1px solid #000;
-    right: 2px;
+    right: 4px;
     top: 12px;
   }
   &.wide .list,
